Agregar reproduccion de video con avkit

--- a/CollectionViewApp/Base.lproj/Main.storyboard
+++ b/CollectionViewApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1wb-jO-EwZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EPo-Nc-6Sc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -197,6 +197,7 @@
                                                                     </cells>
                                                                     <connections>
                                                                         <outlet property="dataSource" destination="Xj4-uk-cJ9" id="Tiy-eu-ZAc"/>
+                                                                        <outlet property="delegate" destination="Xj4-uk-cJ9" id="xeV-cD-3HT"/>
                                                                     </connections>
                                                                 </collectionView>
                                                             </subviews>
@@ -251,17 +252,62 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CcG-5T-lhr"/>
                     </view>
+                    <navigationItem key="navigationItem" id="0sY-sV-A2C"/>
                     <connections>
                         <outlet property="filmsTableView" destination="Lgo-b4-U3V" id="uZb-jJ-WMC"/>
                         <outlet property="highlightsCollectionView" destination="Q0c-O1-8jB" id="ehX-hO-pJy"/>
                         <outlet property="resizableHeightConstant" destination="lQo-K2-c4n" id="dCY-DQ-c72"/>
                         <outlet property="resizableView" destination="P9e-S2-eON" id="e2P-E1-FSZ"/>
                         <outlet property="scrollView" destination="6Nt-yp-39M" id="4xr-VF-x3i"/>
+                        <segue destination="kbp-Xi-ucp" kind="show" identifier="showMovieDetail" id="gdH-n7-fxg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HaN-ja-yeD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1365.5999999999999" y="162.3688155922039"/>
+            <point key="canvasLocation" x="2399.1999999999998" y="191.1544227886057"/>
+        </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="dZ1-X4-scg">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailVC" id="kbp-Xi-ucp" customClass="MovieDetailViewController" customModule="CollectionViewApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yUb-09-s7H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4RA-QQ-0ze">
+                                <rect key="frame" x="258" y="201" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="playVideoAction:" destination="kbp-Xi-ucp" eventType="touchUpInside" id="18C-ej-Yx4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ZdO-Ab-62W"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EOx-TU-zpX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3276" y="180"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gfe-QT-ZsO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EPo-Nc-6Sc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wXl-Nd-fOW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1wb-jO-EwZ" kind="relationship" relationship="rootViewController" id="5xd-2X-Dy0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8kw-wz-YT6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1460" y="191.1544227886057"/>
         </scene>
     </scenes>
 </document>
